test/negative/101_unclosed_brace.fx
// expect: not closed
fun f() {
