test/negative/101_unclosed_brace.err
101_unclosed_brace.fx:3:1: error: some braces (around 101_unclosed_brace.fx:2:9) are not closed
